### 25-Sep-2019 - MDD -- Version 10.2.1
    CALACS has been modified to allow the PHOTMODE keyword to be updated with
    the MJD for the SBC, in addition to the HRC and WFC. This will allow
    time-dependent sensitivity to be applied properly to SBC.

### 06-Mar-2019 - MDD -- Version 10.2.0
    For bias or dark images, ACSREJ ignores the bad pixels (BPIXTAB flag of 4) 
    during the combination process for the SCI and ERR arrays (i.e. treat bad 
    pixels as normal pixels).

### 09-Aug-2018 - JAN/MDD -- Version 10.1.0
    The dark correction, DARKCORR step of the ACS2D algorithm, has been modified
    to work directly on the full 2D data rather than on a line-by-line basis PR#315.

    The bias shift correction, BLEVCORR step of the ACSCCD algorithm, has been
    upgraded to accommodate the new supported subarrays which have both physical
    and virtual overscan PR#312. This is the same algorithm which applies to full
    frame data.

    Forward model functionality was implemented which exploits the existing CTE
    code and usage (Generation 2 only). Instead of correcting the CTE trails, the
    forward model functionality simulates (adds) the trails PR#313. This
    functionality should be accessed via the new ACSTOOLS function, acscteforwardmodel.py

    Updated ACS library routine, getacskeys, updated to call the new HSTIO function
    which robustly determines the number of IMSETS in a FITS file PR#330.

### 19-Jan-2018 - JAN/MDD -- Version 10.0.0
    ACSREJ calculations now in electrons, threshold uses ERR arrays.  CALACS
    uses amp-dependent read noise for threshold to determine if a correction can
    be applied. Bug fixes.

### 01-Jun-2017 - JAN -- Version 9.2.0
    New CTE algorithm implemented. Use of either new (gen2) & old (gen1) 
    dynamically detected from CTE_NAME in PCTETAB, however --ctegen 1 is explicitly
    required to override the gen2 default.
    New cmd line options added: --ntherads <n>, --ctegen <1|2>, --pctetab <filename>
